<resources>

    <!-- "Environment" Variables -->
    <string name="firebase_storage_bucket_link">gs://mobdeve-teamwork.appspot.com</string>

    <string name="app_name">Teamwork</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_register">Register</string>
    <string name="register_description">Get your tasks in line with Teamwork. Find friends who share the same interest and work towards a unified better goal.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sign_in_with_google">&#160;&#160;&#160;&#160;&#160;Sign in with Google</string>
    <string name="register_header">Register New Account</string>
    <string name="my_guilds">My Guilds</string>
    <string name="search_guilds">SEARCH GUILDS</string>
    <string name="tasks">Tasks</string>
    <string name="guilds">Guilds</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_guilds_prompt">You don\' t seem to \nhave a guild ...</string>
    <string name="join_guild_prompt">Join one?</string>
    <string name="search_guilds_btn">SEARCH GUILDS</string>
    <string name="sample_guild_name">Google Firebase PH</string>
    <string name="sample_member_count">Members: 4,212</string>
    <string name="member_count">Members: %1$,d</string>
    <string name="join_guild_btn">JOIN</string>
    <string name="view_guild_btn">VIEW</string>
    <string name="desc_dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation . . .</string>
    <string name="desc_dummy_text_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vel consectetur dui, ac laoreet erat. Etiam aliquam maximus risus vel luctus. Proin dui nibh, interdum non tempor vel, fermentum at urna. Aenean tristique ornare velit nec varius. Curabitur purus nulla, elementum nec neque a, laoreet blandit quam. Aliquam dictum pulvinar viverra. Vestibulum ornare, tellus id euismod imperdiet, purus massa bibendum sem, a dapibus neque nunc non ligula. Nullam gravida in neque eget suscipit. Donec et consequat purus, nec vulputate dui. Integer facilisis, arcu non volutpat lobortis, elit ipsum malesuada purus, eget aliquet velit turpis a eros. In euismod aliquam auctor. Praesent tempor tincidunt massa, ut lacinia risus semper a. \n\nPhasellus varius, ligula vitae tristique convallis, metus nisi pretium mauris, at molestie nunc nulla ut ante. Ut efficitur dui nec nulla facilisis aliquet. Phasellus dignissim purus enim, in ornare quam elementum et. Duis mollis orci mauris, ac sagittis eros fringilla quis. Vivamus sit amet nisi vitae tellus posuere sollicitudin. Sed sed lectus ac orci ultricies ultricies et sed turpis. Suspendisse tincidunt non metus sed pulvinar. Mauris placerat ligula sed tellus porttitor, sit amet tempus velit feugiat. Morbi quis ex interdum metus fermentum laoreet ac eget lacus. Praesent et odio ligula. In hac habitasse platea dictumst. Suspendisse rutrum vitae turpis a mattis. Nunc vitae molestie justo. Donec sit amet sapien nec nunc faucibus lobortis. Morbi vehicula mauris id eros ultricies vestibulum. Praesent nec lacinia leo, vel placerat quam.</string>
    <string name="projects">Projects</string>
    <string name="guild_post_dummy_text">I want to somehow be as strong as Saitama, he’s my biggest idol! But I can’t seem to do push-ups properly, any tips?</string>
    <string name="posts_header">POSTS</string>
    <string name="sample_username">redstoneadi</string>
    <string name="sample_date_posted">Posted 1m ago</string>
    <string name="chip_support">Support</string>
    <string name="chip_social">Social</string>
    <string name="chip_challenge">Challenge</string>
    <string name="sample_post_title">Difficulty with Pushups</string>
    <string name="comment_hint">Add comment...</string>

    <!-- Tasks Dashboard Page -->
    <string name="task_header">My Tasks</string>
    <string name="task_filter_selector">Filter by</string>
    <string name="desc_header">Description</string>
    <string name="post_title_header">Title</string>

    <!-- Tasks List Item -->
    <string name="task_placeholder_name">Teamwork Task</string>
    <string name="task_placeholder_about">Teamwork task waiting to be completed. This is the about part!</string>
    <string name="is_completed">Completed</string>
    <string name="task_subtasks">Subtasks</string>
    <string name="task_list_due_time">00:00</string>
    <string name="task_list_due_date">00/00/00</string>

    <!-- New Task View -->
    <string name="new_task">Add a New Task</string>
    <string name="new_task_form_task_name">Task Name:</string>
    <string name="new_task_form_hint_task_name">Enter New Task Name</string>
    <string name="new_task_form_about">About Task:</string>
    <string name="new_task_form_hint_about">What is the task about?</string>
    <string name="new_task_form_description">Task Description:</string>
    <string name="new_task_form_hint_description">Describe this task in detail</string>
    <string name="new_task_form_due_date">Task Due Date:</string>
    <string name="new_task_form_due_time">Due Date:</string>
    <string name="new_task_form_hint_due_time">Set Task Due Time</string>
    <string name="new_task_form_hint_due_date">Set Task Due Date</string>
    <string name="new_task_due_bold">DUE</string>
    <string name="new_task_create_task">Create Task</string>

    <!-- New Subtask View -->
    <string name="new_subtask">Add a Subtask</string>

    <!-- View Task -->
    <string name="view_task_about_header">About</string>
    <string name="view_task_description_header">Description</string>
    <string name="view_task_subtasks_header">Subtasks</string>
    <string name="view_task_extended_fab_text">Subtask</string>

    <!-- Edit Task -->
    <string name="edit_task_about_hint">About this task</string>
    <string name="edit_task_name_hint">Task Name</string>
    <string name="edit_task_desc_hint">Task Description</string>

    <!-- Menu Titles -->
    <string name="delete_project_label">Delete Project</string>
    <string name="delete_task_label">Delete Task</string>

    <!-- Settings Page -->
    <string name="settings_placeholder_username">Grant_Mac_Donald_Hard_A_Farm</string>
    <string name="settings_edit_username_text">Change Username</string>
    <string name="settings_logout">Logout</string>

    <!-- Photo Upload Dialog -->
    <string name="photo_upload_dialog_message">Upload image from Camera or Gallery?</string>
    <string name="photo_upload_dialog_cancel">Cancel</string>
    <string name="photo_upload_dialog_camera">Camera</string>
    <string name="photo_upload_dialog_gallery">Gallery</string>

    <!-- New Project View -->
    <string name="new_project">Add a New Project</string>
    <string name="new_project_form_project_name">Project Name:</string>
    <string name="new_project_form_hint_project_name">Enter New Project Name</string>
    <string name="new_project_form_about">About Project:</string>
    <string name="new_project_form_hint_about">What is the project about?</string>
    <string name="new_project_form_description">Project Description:</string>
    <string name="new_project_form_hint_description">Describe this project in detail</string>
    <string name="new_project_form_due_date">Project Due Date:</string>
    <string name="new_project_form_due_time">Due Date:</string>
    <string name="new_project_form_hint_due_time">Set Project Due Time</string>
    <string name="new_project_form_hint_due_date">Set Project Due Date</string>
    <string name="new_project_due_bold">DUE</string>
    <string name="new_project_create_project">Create Project</string>
    <string name="project_list_due_time">00:00</string>
    <string name="project_list_due_date">00/00/00</string>
    <string name="edit_project_image">Choose Image</string>
    <string name="edit_project_task">Task</string>

</resources>